--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
-<%- include("header") %>
+<%- include("header") -%>
 
 <h1>Home</h1>
 <p><%= homeStartingContent %></p>
 
-<%- include("footer") %>
+<%- include("footer") -%>
