--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -2,8 +2,8 @@
 
 <h1>Compose</h1>
 <form action="/compose" method="post">
-  <input type="text">
-  <button>Publish</button>
+  <input type="text" name="postTitle">
+  <button type="submit">Publish</button>
 </form>
 
 <%- include("partials/footer") -%>
