--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -2,8 +2,19 @@
 
 <h1>Compose</h1>
 <form action="/compose" method="post">
-  <input type="text" name="postTitle">
-  <button type="submit">Publish</button>
+  <div class="form-group">
+    <label for="postTitle">Title</label>
+    <input class="form-control" type="text" id="postTitle" name="postTitle">
+  </div>
+  <div class="form-group">
+    <label for="postBody">Post</label>
+    <textarea class="form-control" 
+      type="text" 
+      id="postBody" 
+      name="postBody"
+      rows="5"></textarea>
+  </div>
+  <button type="submit" class="btn btn-primary">Publish</button>
 </form>
 
 <%- include("partials/footer") -%>
