--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,5 +2,10 @@
 
 <h1>Home</h1>
 <p><%= homeStartingContent %></p>
+<% for (let obj of posts) { %>
+  <h2> <%= obj.title %> </h2>
+  <p> <%= obj.content %> </p>
+<% } %> 
+
 
 <%- include("partials/footer") -%>
