--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,10 +2,10 @@
 
 <h1>Home</h1>
 <p><%= homeStartingContent %></p>
-<% for (let obj of posts) { %>
+<% posts.forEach(obj => { %>
   <h2> <%= obj.title %> </h2>
   <p> <%= obj.content %> </p>
-<% } %> 
+<% }) %> 
 
 
 <%- include("partials/footer") -%>
