Improve naming of loop element from 'obj' to 'post'

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,9 +2,9 @@
 
 <h1>Home</h1>
 <p><%= homeStartingContent %></p>
-<% posts.forEach(obj => { %>
-  <h2> <%= obj.title %> </h2>
-  <p> <%= obj.content %> </p>
+<% posts.forEach(post => { %>
+  <h2> <%= post.title %> </h2>
+  <p> <%= post.content %> </p>
 <% }) %> 
 
 
