--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,8 +4,11 @@
 <p><%= homeStartingContent %></p>
 <% posts.forEach(post => { %>
   <h2> <%= post.title %> </h2>
-  <p> <%= post.content %> </p>
+  <p> <%= post.content %> 
+    <% if (post.content.length > 100) { %>
+      <a href="/posts/<%= post.title %>" style="display: inline">Read More</a>
+    <% } %>
+  </p>
 <% }) %> 
-
 
 <%- include("partials/footer") -%>
